--- a/temp.html
+++ b/temp.html
@@ -8,18 +8,19 @@
 
 <body>
 
-    <h1>I am a level one heading</h1>
+<h1>I am a level one heading</h1>
 
-    <p>This is a paragraph of text. In the text is a <span>span element</span>
-and also a <a href="https://example.com">link</a>.</p>
+<p>This is a paragraph of text. In the text is a <span>span element</span> 
+and also a <a href="http://example.com">link</a>.</p>
 
-    <p>This is the second paragraph. It contains an <em>emphasized</em> element.</p>
+<p>This is the second paragraph. It contains an <em>emphasized</em> element.</p>
 
-    <ul>
-        <li>Item <span>one</span></li>
-        <li>Item two</li>
-        <li>Item <em>three</em></li>
-    </ul>
+<ul>
+    <li>Item <span>one</span></li>
+    <li class = "special">Item two</li>
+    <li>Item <em>three</em></li>
+</ul>
+    
 
 </body>
 
