--- a/temp.html
+++ b/temp.html
@@ -1,27 +1,21 @@
 <link rel="stylesheet" href="styles.css">
-<!doctype html>
+
+<doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Getting started with CSS</title>
-</head>
 
-<body>
+    <h1>Jane Doe</h1>
 
-<h1>I am a level one heading</h1>
+    <p><div1 class="job-title">Web Developer</div></p>
 
-<p>This is a paragraph of text. In the text is a <span>span element</span> 
-and also a <a href="http://example.com">link</a>.</p>
+    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
-<p>This is the second paragraph. It contains an <em>emphasized</em> element.</p>
+    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. </p>
 
-<ul>
-    <li>Item <span>one</span></li>
-    <li class = "special">Item two</li>
-    <li>Item <em>three</em></li>
-</ul>
-    
-
-</body>
+    <h2>Contact information</h2>
+    <ul>
+        <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
+        <li>Web: <a href="http://example.com">http://example.com</a></li>
+        <li>Tel: 123 45678</li>
+    </ul>
 
 </html>
