--- a/assets/videos/fav.html
+++ b/assets/videos/fav.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../styles.css">
+<link rel="stylesheet" href="styles.css">
 <html lang="en">
   <head>
     <meta charset="utf-8">
