--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-"Hello World" 
+<link rel="stylesheet" href="styles.css">
+
+
+<html lang="en">
+
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DLSS</title>
+  </head>
+
+
+  <body>
+    <h1> Supersampling + Anti-aliasing </h1>
+
+    <form action="hello" method="post">
+      <label for="img">Select image:</label>
+      <input type="file" id="img" name="img" accept="image/*">
+      <input type="submit">
+    </form>
+
+  </body>
+
+</html>
