--- a/assets/resume/resume-swe.html
+++ b/assets/resume/resume-swe.html
@@ -21,7 +21,7 @@
         <ul>
         <li>Major: Electrical and Computer Engineering.</li>
         <li>GPA 3.70.</li>
-        <li>Relevant course work: Computational Imaging, Image Processing, Neural Networks and Deep Learning.</li>
+        <li>Relevant course work: Computational Imaging, Computer Vision, Neural Networks and Deep Learning.</li>
         </ul>
         </p>
 
@@ -35,7 +35,7 @@
         <li>Major: Electrical and Computer Engineering.</li>
         <li>Minor: Statistics.</li>
         <li>GPA 3.70.</li>
-        <li>Relevant course work: Computational Imaging, Image Processing, Neural Networks and Deep Learning.</li>
+        <li>Relevant course work: Communication Systems, Image Processing.</li>
         </ul>
         </p>
     </div>
