delete abundant files

--- a/index.html
+++ b/index.html
@@ -138,25 +138,7 @@
         <!-- End footer -->
     </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="js/scripts.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/scripts.js"></script>
 </body>
-        <script>
-            function copyToClipboard(str) {
-                // copyt to clipboard
-                const el = document.createElement('textarea');
-                el.value = str;
-                document.body.appendChild(el);
-                el.select();
-                document.execCommand('copy');
-                document.body.removeChild(el);
-
-                // show copy success message
-                document.getElementById("custom-tooltip").style.display = "inline-block";
-                setTimeout( function() {
-                    document.getElementById("custom-tooltip").style.display = "none";
-                }, 1000);
-            };
-           
-        </script>
 </html>
