deleted abundant files`

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="fullpage">
+    <div class="container">
 
         <div id="lead">
             <div id="lead-content">
