--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="fullpage">
 
-        <div id="lead">
+        <section id="lead">
             <div id="lead-content">
                 <h1>Yi Zhou</h1>
                 <h2>Software Engineer</h2>
@@ -33,10 +33,10 @@
                 </span>
             </div>
             <!-- End #lead-down -->
-        </div>
+        </section>
         <!-- End #lead -->
 
-        <div id="about">
+        <section id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
@@ -49,10 +49,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- End #about -->
 
-        <div id="experience" class="background-alt">
+        <section id="experience" class="background-alt">
             <h2 class="heading">Experience</h2>
             <div id="experience-timeline">
                 <div data-date="May 2021 – Present">
@@ -63,10 +63,10 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- End #experience -->
 
-        <div id="education">
+        <section id="education">
             <h2 class="heading">Education</h2>
             <div class="education-block">
                 <h3>University of California, Los Angeles</h3>
@@ -91,10 +91,10 @@
                 </ul>
             </div>
             <!-- End .education-block -->
-        </div>
+        </section>
         <!-- End #education -->
 
-        <div id="skills">
+        <section id="skills">
             <h2 class="heading">Skills</h2>
             <ul>
                 <li>Matlab</li>
@@ -105,7 +105,7 @@
                 <li>Java</li>
                 <li>C</li>
             </ul>
-        </div>
+        </section>
         <!-- End #skills -->
 
         <footer>
