added nav buttons

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
 </head>
 
 <body>
-    <div class="fullpage">
+    <div class="navbutton-container">
+        <div class="navbutton-grid">
+            <a href="#lead" data-section="lead" class="navbutton"></a>
+            <a href="#about" data-section="about" class="navbutton"></a>
+        </div>
+    </div>
 
+    <div class="fullpage">
         <section id="lead">
             <div id="lead-content">
                 <h1>Yi Zhou</h1>
