added nav description

--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
 
 <body>
     <div class="navbutton-container">
+
+        <div class="navbutton-grid">
+            <span class="navName">Home</span>
+            <span class="navName">About</span>
+        </div>
+
         <div class="navbutton-grid">
             <a href="#lead" data-section="lead" class="navbutton"></a>
             <a href="#about" data-section="about" class="navbutton"></a>
+            <div id="nav-overlay"></div>
         </div>
     </div>
 
@@ -33,11 +40,6 @@
 
             <div id="lead-overlay"></div>
 
-            <div id="lead-down">
-                <span>
-                    <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                </span>
-            </div>
             <!-- End #lead-down -->
         </section>
         <!-- End #lead -->
@@ -121,11 +123,6 @@
                         <p>
                             Copyright &copy; 2021 Yi Zhou
                         </p>
-                    </div>
-                    <div class="col-sm-2 top">
-                        <span id="to-top">
-                            <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                        </span>
                     </div>
 
                     <div class="col-sm-5 social">
