--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                 <li>Django</li>
                 <li>Java</li>
                 <li>C</li>
+                <li>PyTorch</li>
+                <li>TensorFlow</li>
+                <li>Simulink</li>
             </ul>
         </section>
         <!-- End #skills -->
