revised nav bar.

--- a/index.html
+++ b/index.html
@@ -15,17 +15,11 @@
 </head>
 
 <body>
-    <div class="navbutton-container">
+    <div class="section_navigation">
 
-        <div class="navbutton-grid">
-            <span class="navName">Home</span>
-            <span class="navName">About</span>
-        </div>
+        <div class="sec_button"><span>Home</span></div>
+        <div class="sec_button"><span>About</span></div>
 
-        <div class="navbutton-grid">
-            <a href="#lead" data-section="lead" class="navbutton"></a>
-            <a href="#about" data-section="about" class="navbutton"></a>
-        </div>
     </div>
 
     <div class="fullpage">
