nav bar clicks jump to div

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 
         <div class="sec_button"><span>Home</span></div>
         <div class="sec_button"><span>About</span></div>
+        <div class="sec_button"><span>Experience</span></div>
+        <div class="sec_button"><span>Education</span></div>
+        <div class="sec_button"><span>Skills</span></div>
 
     </div>
 
     <div class="fullpage">
-        <section id="lead">
+        <section id="lead" class="nav-select">
             <div id="lead-content">
                 <h1>Yi Zhou</h1>
                 <h2>Software Engineer</h2>
@@ -37,7 +40,7 @@
         </section>
         <!-- End #lead -->
 
-        <section id="about">
+        <section id="about" class="nav-select">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
@@ -53,7 +56,7 @@
         </section>
         <!-- End #about -->
 
-        <section id="experience" class="background-alt">
+        <section id="experience" class="background-alt nav-select">
             <h2 class="heading">Experience</h2>
             <div id="experience-timeline">
                 <div data-date="May 2021 – Present">
@@ -67,7 +70,7 @@
         </section>
         <!-- End #experience -->
 
-        <section id="education">
+        <section id="education" class="nav-select">
             <h2 class="heading">Education</h2>
             <div class="education-block">
                 <h3>University of California, Los Angeles</h3>
@@ -95,7 +98,7 @@
         </section>
         <!-- End #education -->
 
-        <section id="skills">
+        <section id="skills" class="nav-select">
             <h2 class="heading">Skills</h2>
             <ul>
                 <li>Matlab</li>
