--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                     </div>
                     <div class="col-md-8">
                         <p>
-                            Currently a graduate student studing in EECS. Knowledgable disciplines range in power system, communciation system, computer vision, machine learning, and web dev.
+                            I am currently a graduate student studing in EECS (Electrical Engineering and Computer Science). My academic track is SS (Signals and Systems), which broadly involves both analog side and digital side. My SS knowledge spans in Power Systems, Communciation Systems, Computer Vision, Machine Learning.
+                        </p>
+                        </br>
+                        <p>
+                            I started programming as a hobby. My first web development project was to help make an online payment system for a community gamming server. The project involves building a webapp, a backbone to support online payment, and an ML model to detect bad players on the gaming server. The project gave me so much fun that I decided to become a software developer. 
                         </p>
                     </div>
                 </div>
@@ -59,7 +63,7 @@
         <section id="experience" class="background-alt nav-select">
             <h2 class="heading">Experience</h2>
             <div id="experience-timeline">
-                <div data-date="May 2021 – Present">
+                <div data-date="May 2021 – Aug 2021">
                     <h3>MORUST INC</h3>
                     <h4>Full Stack Engineer</h4>
                     <p>
