--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </p>
                         </br>
                         <p>
-                            I started programming as a hobby. My first web development project was to help make an online payment system for a community gamming server. The project involves building a webapp, a backbone to support online payment, and an ML model to detect bad players on the gaming server. The project gave me so much fun that I decided to become a software developer. 
+                            I started programming as a hobby. My first web development project was to help make an online payment system for a community gamming server. The project involves building a webapp, a backbone to support online payment, and an ML model to detect bad players on the gaming server. The project gave me so much fun that I decided to become a software engineer. 
                         </p>
                     </div>
                 </div>
