--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="col-md-8">
                         <p>
-                            I am currently a graduate student studing in EECS (Electrical Engineering and Computer Science). My academic track is SS (Signals and Systems), which broadly involves both analog side and digital side. My SS knowledge spans in Power Systems, Communciation Systems, Computer Vision, Machine Learning.
+                            I am currently a graduate student studying in EECS (Electrical Engineering and Computer Science). My academic track is SS (Signals and Systems), which broadly involves both analog side and digital side. My SS knowledge spans in Power Systems, Communciation Systems, Computer Vision, Machine Learning and Robotics.
                         </p>
                         </br>
                         <p>
