--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
                 <div class="contact">
                     <!-- Google -->
-                    <!--a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
                         <i class="fab fa-google"></i>
-                    </a -->
+                    </a >
                     
                     <!-- Linkedin -->
                     <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/yi-zhou-0614b9128/" role="button">
