--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 <body>
     <div id="wrapper">
         <div class="main-layout" >
-            <div class="headshot container spacing">
-                <div class="project-index">List of projects</div>
+            <div class="headshot container">
+                <p class="name-text rotated-text-upright"> 丘可</p>
+                <p class="name-text rotated-text-mixed"> Yi Zhou</p>
             </div>
             
-            <div class="intro container spacing">
-                <p class="intro-text center-me-h center-me-v"> Yi Zhou | 丘可</p>
-                <p class="intro-text-small hidden"> Yi Zhou</p>
-                <p class="intro-text-small hidden"> 丘可</p>
+            <div class="intro container">
+                <div class="intro-text">
+                    <p class="intro-text">
+                     I am currently a graduate student studying in EECS (Electrical Engineering and Computer Science). My academic track is SS (Signals and Systems), which broadly involves both analog side and digital side. My SS knowledge spans in Power Systems, Communciation Systems, Computer Vision, Machine Learning and Robotics. </p>
+                </div>
             </div>
             
             <div class="project">
-                <div class="buffer"></div>
-                <div class="drag container right-me-v spacing" >
+                <!-- div class="buffer"></div -->
+                <div class="drag container right-me-v" >
                     <input class="slider" type="range" min="1" max="100" value="0">
                 </div>
             </div>
