--- a/index.html
+++ b/index.html
@@ -11,27 +11,30 @@
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
     <div id="wrapper">
-        <div class="main-layout" >
+        <div id="main" class="main-layout" >
             <div class="headshot container">
-                <p class="name-text rotated-text-upright"> 丘可</p>
-                <p class="name-text rotated-text-mixed"> Yi Zhou</p>
+                <p class="name-cn name-text rotated-text-upright"> 丘可</p>
+                <p class="name-en name-text rotated-text-mixed"> Yi Zhou</p>
             </div>
             
             <div class="intro container">
                 <div class="intro-text">
-                    <p class="intro-text">
-                     I am currently a graduate student studying in EECS (Electrical Engineering and Computer Science). My academic track is SS (Signals and Systems), which broadly involves both analog side and digital side. My SS knowledge spans in Power Systems, Communciation Systems, Computer Vision, Machine Learning and Robotics. </p>
+                    <div class="intro-text">
+                        <p>Ok. My home page.</p>
+                        <p style="text-align: right;">我的主页。</p>
+                    </div>
+                    <div style="font-size:small; color: black;"> Not a finished product.</div>
                 </div>
             </div>
             
             <div class="project">
-                <!-- div class="buffer"></div -->
                 <div class="drag container right-me-v" >
-                    <input class="slider" type="range" min="1" max="100" value="0">
+                    Open
                 </div>
             </div>
         </div>
