--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="intro container">
                 <div class="intro-text">
                     <div class="intro-text">
-                        <p>Ok. My home page.</p>
-                        <p style="text-align: right;">我的主页。</p>
+                        <p>Ok. My home page. I am an SDE.</p>
+                        <p style="text-align: right;">这是我的主页，我是软件工程师</p>
                     </div>
                     <div style="font-size:small; color: black;"> Not a finished product.</div>
                 </div>
