added transition to #more

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 </div>
             </div>
         </div>
+
         <!-- Canvas -->
-        <div id="more" class="hidden more container high">
+        <div id="more" class="more container canvas-away">
             <div class="vertical-center">
                 <div style="font-size:small; color: black;"> Not a finished product.</div>
             </div>
