--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
         <!-- Canvas -->
         <div id="more" class="more container canvas-away">
             <div class="vertical-center">
-                <div style="font-size:small; color: black;"> Not a finished product.</div>
+                <div style="font-size:small; color: black; background-color: rgba(177, 212, 224,1);"> My skill in a nutshell => </div>
+                    <iframe width="100%" height="100%" border-style="none"
+                    src="https://www.youtube.com/embed/YnL9vAFphmE">
+                    </iframe>
             </div>
         </div>
         <!-- End  -->
