changed text in html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="intro-text intro-text-big">
                     <div class="intro-text-child">
                         <p>My home page. I am an SDE.</p>
-                        <p style="text-align: right; justify-content: right;">丘可是软件工程师。</p>
+                        <p style="text-align: right; justify-content: right;">我是软件工程师。</p>
                     </div>
                     
                 </div>
