--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <title>E's Portfolio</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link href="css/main.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
@@ -43,7 +39,7 @@
         <!-- Canvas -->
         <div id="more" class="more container canvas-away">
             <div class="vertical-center">
-                <div style="font-size:small; color: black; background-color: rgba(177, 212, 224,1);"> My skill in a nutshell => </div>
+                <div id="enclose-vid" style="font-size:small; color: black; background-color: rgba(177, 212, 224,1);"> My skill in a nutshell => </div>
                     <iframe width="100%" height="100%" border-style="none"
                     src="https://www.youtube.com/embed/YnL9vAFphmE">
                     </iframe>
@@ -89,5 +85,9 @@
         
     </div>
 </body>
+<!-- Font Awesome -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="js/scripts.js"></script>
 </html>
