--- a/index.html
+++ b/index.html
@@ -90,4 +90,14 @@
 rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="js/scripts.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M89DENS5RE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M89DENS5RE');
+</script>
 </html>
