--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="intro container">
                 <div class="intro-text intro-text-big">
                     <div class="intro-text-child">
-                        <p>My home page. I am an SDE.</p>
+                        <p>I am an SDE.</p>
                         <p style="text-align: right; justify-content: right;">我是软件工程师。</p>
                     </div>
                     
@@ -51,7 +51,7 @@
             <div class="footer-layout">
                 <div class="copyright" >
                     <p>
-                        Copyright &copy; 2022 Yi Zhou
+                        &copy; 2022 Yi Zhou
                     </p>
                 </div>
 
