--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="wrapper">
         <div id="main" class="main-layout" >
             <div class="headshot container">
-                <p class="name-cn name-text rotated-text-upright"> 丘可</p>
+                <p class="name-cn name-text rotated-text-upright"> 周易</p>
                 <p class="name-en name-text rotated-text-mixed"> Yi Zhou</p>
             </div>
             
@@ -57,7 +57,7 @@
 
                 <div class="contact">
                     <!-- Google -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" href="chokychou@google.com" role="button">
                         <i class="fab fa-google"></i>
                     </a >
                     
